avoid warning message